--- a/pemesanan/src/main/resources/templates/tables/showdetailorder.html
+++ b/pemesanan/src/main/resources/templates/tables/showdetailorder.html
@@ -468,8 +468,17 @@
 										<a th:href="@{/product}">
 											<span class="sub-item">Product Form</span>
 										</a>
+
+									</li>
+									<li>
 										<a th:href="@{ordering/order}">
 											<span class="sub-item">Order Form</span>
+										</a>
+
+									</li>
+									<li>
+										<a th:href="@{transaction/form}">
+											<span class="sub-item">Transaction Form</span>
 										</a>
 
 									</li>
@@ -493,6 +502,11 @@
 									<li>
 										<a th:href="@{/ordering/show}">
 											<span class="sub-item">Order</span>
+										</a>
+									</li>
+									<li>
+										<a th:href="@{/transaction/show}">
+											<span class="sub-item">Transaction</span>
 										</a>
 									</li>
 									<li>
