--- a/pemesanan/src/main/resources/templates/tables/showorderA.html
+++ b/pemesanan/src/main/resources/templates/tables/showorderA.html
@@ -496,6 +496,17 @@
 										</a>
 									</li>
 									<li>
+										<a th:href="@{/transaction/show}">
+											<span class="sub-item">Transaction</span>
+										</a>
+									</li>
+									<li>
+										<a th:href="@{/sale/show}">
+											<span class="sub-item">Sale</span>
+										</a>
+									</li>
+
+									<li>
 										<a href="../tables/tables.html">
 											<span class="sub-item">Basic Table</span>
 										</a>
