--- a/pemesanan/src/main/resources/static/css/style_login.css
+++ b/pemesanan/src/main/resources/static/css/style_login.css
@@ -1,12 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 .body{
-    background:#D19C97;
+   /* background:#fffff;*/
 }
 
 .login-page {
+
+
   width: 360px;
-  padding: 8% 0 0;
+  padding: 10% 0 0;
   margin: auto;
   margin-top:-50px;
 }
@@ -16,17 +18,21 @@ img{
 
 .form h1{
      margin-top:-10px;
+     color: #388bff;
+     font-color: #388bff;
+
 }
 .form {
+  background: #608fff;
   position: relative;
   z-index: 1;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-   background:rgba(0, 0, 0, 0.20);
-   box-shadow: 0px 0px 10px 3px;
+  /*box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);*/
+/*   background:rgba(0, 0, 0, 0.20);*/
+   /*box-shadow: 0px 0px 5px 3px;*/
    border-radius:5px;
 }
 .form input {
@@ -40,12 +46,13 @@ img{
   box-sizing: border-box;
   font-size: 14px;
   border-radius:10px;
+
 }
 .form button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #BC8F8F;
+  background: #2151a2;
   width: 100%;
   padding: 15px;
   color: #FFFFFF;
@@ -57,7 +64,7 @@ img{
   border-radius:10px;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #D19C97;
+  background: #1c2a4f;
 }
 .form .message {
   margin: 15px 0 0;
@@ -108,12 +115,12 @@ img{
   color: #EF3B3A;
 }
 body {
-  background: #bd8f8f; /* fallback for old browsers */
- /* background: -webkit-linear-gradient(right, #D19C97, #8DC26F);
-  background: -moz-linear-gradient(right, #D19C97, #8DC26F);
-  background: -o-linear-gradient(right, #D19C97, #8DC26F);*/
+  background: #ffffff; /* fallback for old browsers */
+ /* background: -webkit-linear-gradient(right, ##007bff, #8DC26F);
+  background: -moz-linear-gradient(right, ##007bff, #8DC26F);
+  background: -o-linear-gradient(right, ##007bff, #8DC26F);*/
 /*
-  background: linear-gradient(to left, #D19C97, #8DC26F);
+  background: linear-gradient(to left, ##007bff, #8DC26F);
 */
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
