--- a/pemesanan/src/main/resources/templates/forms/customerformsA.html
+++ b/pemesanan/src/main/resources/templates/forms/customerformsA.html
@@ -34,7 +34,7 @@
 			<div class="logo-header" data-background-color="blue">
 				
 				<a href="../index.html" class="logo">
-					<img src="../../assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
+					<img src="../../assets/img/logo(2).png" alt="navbar brand" class="navbar-brand">
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon">
@@ -71,7 +71,7 @@
 								<i class="fa fa-search"></i>
 							</a>
 						</li>
-						<li class="nav-item dropdown hidden-caret">
+						<!--<li class="nav-item dropdown hidden-caret">
 							<a class="nav-link dropdown-toggle" href="#" id="messageDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="fa fa-envelope"></i>
 							</a>
@@ -140,8 +140,8 @@
 									<a class="see-all" href="javascript:void(0);">See all messages<i class="fa fa-angle-right"></i> </a>
 								</li>
 							</ul>
-						</li>
-						<li class="nav-item dropdown hidden-caret">
+						</li>-->
+						<!--<li class="nav-item dropdown hidden-caret">
 							<a class="nav-link dropdown-toggle" href="#" id="notifDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="fa fa-bell"></i>
 								<span class="notification">4</span>
@@ -196,8 +196,8 @@
 									<a class="see-all" href="javascript:void(0);">See all notifications<i class="fa fa-angle-right"></i> </a>
 								</li>
 							</ul>
-						</li>
-						<li class="nav-item dropdown hidden-caret">
+						</li>-->
+						<!--<li class="nav-item dropdown hidden-caret">
 							<a class="nav-link" data-toggle="dropdown" href="#" aria-expanded="false">
 								<i class="fas fa-layer-group"></i>
 							</a>
@@ -249,33 +249,32 @@
 									</div>
 								</div>
 							</div>
-						</li>
+						</li>-->
 						<li class="nav-item dropdown hidden-caret">
 							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
 								<div class="avatar-sm">
-									<img src="../../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
+									&nbsp;&nbsp;&nbsp;Logout
+									<!--<img src="../../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">-->
 								</div>
 							</a>
 							<ul class="dropdown-menu dropdown-user animated fadeIn">
 								<div class="dropdown-user-scroll scrollbar-outer">
 									<li>
 										<div class="user-box">
-											<div class="avatar-lg"><img src="../../assets/img/profile.jpg" alt="image profile" class="avatar-img rounded"></div>
-											<div class="u-text">
-												<h4>Hizrian</h4>
-												<p class="text-muted">hello@example.com</p><a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
-											</div>
+											<!--<div class="avatar-lg"><img src="../../assets/img/profile.jpg" alt="image profile" class="avatar-img rounded"></div>-->
+											<h4 th:text="${userName}"></h4>
+											<p class="text-muted" th:text="${userEmail}"></p>
 										</div>
 									</li>
 									<li>
-										<div class="dropdown-divider"></div>
+										<!--<div class="dropdown-divider"></div>
 										<a class="dropdown-item" href="#">My Profile</a>
 										<a class="dropdown-item" href="#">My Balance</a>
 										<a class="dropdown-item" href="#">Inbox</a>
 										<div class="dropdown-divider"></div>
 										<a class="dropdown-item" href="#">Account Setting</a>
-										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="#">Logout</a>
+										<div class="dropdown-divider"></div>-->
+										<a class="dropdown-item" th:href="@{/logout}">Logout</a>
 									</li>
 								</div>
 							</ul>
@@ -333,7 +332,7 @@
 							</a>
 							<div class="collapse" id="dashboard">
 								<ul class="nav nav-collapse">
-									<li>
+									<!--<li>
 										<a href="../../demo1/index.html">
 											<span class="sub-item">Dashboard 1</span>
 										</a>
@@ -342,7 +341,7 @@
 										<a href="../../demo2/index.html">
 											<span class="sub-item">Dashboard 2</span>
 										</a>
-									</li>
+									</li>-->
 								</ul>
 							</div>
 						</li>
@@ -352,7 +351,7 @@
 							</span>
 							<h4 class="text-section">Components</h4>
 						</li>
-						<li class="nav-item">
+						<!--<li class="nav-item">
 							<a data-toggle="collapse" href="#base">
 								<i class="fas fa-layer-group"></i>
 								<p>Base</p>
@@ -412,8 +411,8 @@
 									</li>
 								</ul>
 							</div>
-						</li>
-						<li class="nav-item">
+						</li>-->
+						<!--<li class="nav-item">
 							<a data-toggle="collapse" href="#sidebarLayouts">
 								<i class="fas fa-th-list"></i>
 								<p>Sidebar Layouts</p>
@@ -448,7 +447,7 @@
 									</li>
 								</ul>
 							</div>
-						</li>
+						</li>-->
 						<li class="nav-item active submenu">
 							<a data-toggle="collapse" href="#forms">
 								<i class="fas fa-pen-square"></i>
@@ -457,11 +456,11 @@
 							</a>
 							<div class="collapse show" id="forms">
 								<ul class="nav nav-collapse">
-									<li class="active">
+									<!--<li class="active">
 										<a href="../forms/forms.html">
 											<span class="sub-item">Basic Form</span>
 										</a>
-									</li>
+									</li>-->
 									<li>
 										<a th:href="@{/product}">
 											<span class="sub-item">Product Form</span>
@@ -471,6 +470,9 @@
 										</a>
 										<a th:href="@{transaction/form}">
 											<span class="sub-item">Transaction Form</span>
+										</a>
+										<a th:href="@{user/create/customer}">
+											<span class="sub-item">Customer Form</span>
 										</a>
 									</li>
 								</ul>
@@ -504,10 +506,15 @@
 											<span class="sub-item">Sale</span>
 										</a>
 									</li>
+									<li>
+										<a th:href="@{/user/customer}">
+											<span class="sub-item">Customer</span>
+										</a>
+									</li>
 								</ul>
 							</div>
 						</li>
-						<li class="nav-item">
+						<!--<li class="nav-item">
 							<a data-toggle="collapse" href="#maps">
 								<i class="fas fa-map-marker-alt"></i>
 								<p>Maps</p>
@@ -522,8 +529,8 @@
 									</li>
 								</ul>
 							</div>
-						</li>
-						<li class="nav-item">
+						</li>-->
+						<!--<li class="nav-item">
 							<a data-toggle="collapse" href="#charts">
 								<i class="far fa-chart-bar"></i>
 								<p>Charts</p>
@@ -543,14 +550,14 @@
 									</li>
 								</ul>
 							</div>
-						</li>
-						<li class="nav-item">
+						</li>-->
+						<!--<li class="nav-item">
 							<a href="../widgets.html">
 								<i class="fas fa-desktop"></i>
 								<p>Widgets</p>
 								<span class="badge badge-success">4</span>
 							</a>
-						</li>
+						</li>-->
 					</ul>
 				</div>
 			</div>
@@ -582,41 +589,39 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-							<form id="form"  th:action="@{/ordering/createorder}" th:object="${order}"  method="post">
+							<form id="form"  th:action="@{/user/register}" th:object="${user}"  method="post">
 							<div class="card">
 								<div class="card-header">
-									<div class="card-title"><b>Buat Pesanan</b></div>
-								</div>
+									<div class="card-title"><b>Tambah Pelanggan</b></div>
+									</div>
+								<!--<input type="text" name="idUser" th:field="*{idUser}" th:value="${user.idUser}" id="idUser" hidden="true">
+-->
 								<div class="card-body">
 									<div class="row">
 										<div class="col-md-6 col-lg-4">
 											<div class="form-group form-floating-label">
-												<input type="text" class="form-control input-border-bottom" th:value="${order.productId}"  id="productId" name="productId" required>
-												<label for="productId" class="placeholder">Id Produk</label>
+												<input type="text" class="form-control input-border-bottom" th:field="${user.name}"  id="name" name="name" required>
+												<label for="name" class="placeholder">Nama Lengkap</label>
 											</div>
 											<div class="form-group form-floating-label">
-												<input type="number" class="form-control input-border-bottom" th:field="*{quantity}"  rows="3" cols="45" id="quantity" name="quantity" required>
-												<label for="quantity" class="placeholder">Jumlah</label>
+												<input type="text" class="form-control input-border-bottom" th:field="*{address}"  id="address" name="address" required>
+												<label for="address" class="placeholder">Alamat</label>
 											</div>
 											<div class="form-group form-floating-label">
-												<input type="number" class="form-control input-border-bottom" th:field="*{dp}"  name="dp" id="dp" required>
-												<label for="dp" class="placeholder">DP</label>
+												<input type="number" class="form-control input-border-bottom" th:field="*{noTelepon}"  name="noTelepon" id="noTelepon" required>
+												<label for="noTelepon" class="placeholder">No Telepon</label>
 											</div>
 											<div class="form-group form-floating-label">
-												<input type="date" class="form-control input-border-bottom" th:field="*{orderDate}"  name="orderDate" id="orderDate">
-												<label for="orderDate" class="placeholder">Tanggal pemesanan</label>
+												<input type="text" class="form-control input-border-bottom" th:field="*{username}"   name="username" id="username">
+												<label for="username" class="placeholder">Username</label>
 											</div>
 											<div class="form-group form-floating-label">
-												<input type="date" class="form-control input-border-bottom" th:field="*{deadline}"   name="deadline" id="deadline">
-												<label for="dp" class="placeholder">Tenggat</label>
+												<input type="password" class="form-control input-border-bottom" th:field="*{password}"  name="password" id="password">
+												<label for="password" class="placeholder">Password</label>
 											</div>
-											<div class="form-group">
-												<div class="input-group">
-													<div class="input-group-prepend">
-														<span class="input-group-text">Detail Pesanan</span>
-													</div>
-													<textarea class="form-control" aria-label="With textarea" name="orderDetails"  th:field="*{orderDetails}" ></textarea>
-												</div>
+											<div class="form-group form-floating-label">
+												<input type="email" class="form-control input-border-bottom" th:field="*{email}"  name="email" id="email">
+												<label for="email" class="placeholder">Email</label>
 											</div>
 										</div>
 									</div>
